# phenopacket-schema

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  Cargo.toml  DISCLAIMER.rst  LICENSE  MAINTAINERS.rst  README.md  README.rst  build.rs  deploy-python.sh  pom.xml  requirements.txt  setup.py
.github/workflows/: maven.yml  python.yml
docs/: Makefile  age.rst  animal-model-example-java.rst  animal-model-example.rst  apiversion.rst  attributes.rst  basics.rst  biocharacteristic.rst  biosample-example.rst  biosample.rst  building-blocks.rst  cancer-example-java.rst  cancer-example.rst  chemotherapy.rst  chemotherapytreatment.rst  cohort.rst  complex-quantity.rst  complex-value.rst  conf.py  covid19-example.rst  cpp.rst  disease.rst  dose-interval.rst  drug-type.rst  evidence.rst  examples.rst  exposure.rst  externalreference.rst  externalresource.rst  family.rst  fhir.rst  file.rst  ga4gh-interoperability.rst  ga4gh-pedigree.rst  gene-interpretation.rst  gene.rst  genomic-interpretation.rst  geolocation.rst  gestational-age.rst  hormonetherapy.rst  (+52 more)
docs/_static/: custom.css
docs/graph/: phenopacket-schema-v1-overview.gv  phenopacket-schema-v1.gv  phenopacket-schema-v2-overview.gv  phenopacket-schema-v2.gv
python/: README.md  pyproject.toml
python/config/: __init__.py
python/src/phenopackets/schema/v2/: __init__.py
python/tests/: conftest.py  covid19.json  test_imports.py  test_phenopackets.py  test_top_level_elements.py
src/main/java/: module-info.java
src/main/proto/: base.proto  interpretation.proto  pedigree.proto  phenopackets.proto  vrs.proto
src/main/proto/ga4gh/pedigree/v1/: pedigree.proto
src/main/proto/ga4gh/vrs/: vrs.proto
src/main/proto/ga4gh/vrs/v1/: vrs.proto
src/main/proto/ga4gh/vrsatil/: vrsatil.proto
src/main/proto/ga4gh/vrsatile/: vrsatile.proto
src/main/proto/ga4gh/vrsatile/v1/: vrsatile.proto
src/main/proto/org/matchmakerexchange/api/v1/: mme.proto
src/main/proto/org/phenopackets/schema/v1/: phenopacket.proto  phenopackets.proto  rare_disease.proto
src/main/proto/phenopackets/schema/v1/: interpretation.proto  phenopackets.proto
src/main/proto/phenopackets/schema/v2/: base.proto  interpretation.proto  phenopackets.proto
src/main/proto/phenopackets/schema/v2/core/: base.proto  biosample.proto  disease.proto  exposure.proto  genome.proto  individual.proto  interpretation.proto  measurement.proto  medical_action.proto  meta_data.proto  pedigree.proto  phenotypic_feature.proto
src/main/proto/phenopackets/vrs/v1/: vrs.proto
src/main/proto/phenopackets/vrsatile/v1/: vrsatile.proto
src/main/rust/: lib.rs
src/test/java/org/ga4gh/vrs/v1/: VrsTest.java
src/test/proto/: README.md  mme.proto
src/test/python/: .gitignore  Makefile  README.md  mcahs1.json  phenopacket_test.py  phenopackets_test.py  vrs.proto
src/test/resources/: biosamples-SAMN05324082.json  toronto_cancer_example.md  toronto_rare_disease_example.md  version-2-scratchpad.yaml
(+73 files in other folders)
