[package]
name = "phenopacket-schema"
version = "2.0.2"
authors = ["Chris Mungall <cjmungall@lbl.gov>", "Jules Jacobsen <j.jacobsen@qmul.ac.uk>", "Peter Robinson <peter.robinson@jax.org>"]
edition = "2021"
description = "A Protobuf schema for capturing clinical phenotypes"
documentation = "https://phenopacket-schema.readthedocs.io/"
repository = "https://github.com/phenopackets/phenopacket-schema"
license = "BSD-3-Clause"
keywords = ["phenopackets", "ga4gh", "serialization", "protobuf"]
readme = "README.rst"
include = ["src/main/proto", "src/main/rust", "build.rs", "Cargo.toml", "/LICENSE", "/*.rst"]

[lib]
path = "src/main/rust/lib.rs"

[dependencies]
bytes = "1.4.0"
prost = { version = "0.11.9", features = ["prost-derive"] }
prost-types = { version = "0.11.9", features = ["std"]}
pbjson = "0.5.1"
pbjson-types = "0.5.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_yaml = "0.9.21"

[build-dependencies]
protobuf-src = "1.1.0"
prost-build = "0.11.9"
pbjson-build = "0.5.1"